Your descriptive commit message

--- a/game/game1/game1.html
+++ b/game/game1/game1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game">
-        <h1>Find the Hazards</h1>
+        <h1 id="find">Find the Hazards</h1>
         <p>Click on the unsafe objects in the room:</p>
         <div id="room">
         </div>
