--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1><center><i><u><marquee>Safety Starts With You !! "Safety is Gainful , Accident Is Painful"</marquee></u></i></center></h1>
         <br>
 
-       <img src="assets/m.jpg" class="main">
+       <img src="assets/tips.jpg" class="main">
         <br>
         
     </section>
@@ -70,6 +70,7 @@
 
 
       <!-- Video starts -->
+       
     <div class="Card">
         <iframe width="700" height="450" src="https://www.youtube.com/embed/Rt1h0jcXgGA?si=kGS9HPmGKvPMDqL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
          referrerpolicy="strict-origin-when-cross-origin" allow="autoplay" allowfullscreen></iframe>
@@ -87,10 +88,10 @@
      <!-- 
            <form action=""> -->
               <h3>Get In Touch</h3>
-              <input type="text" placeholder="name" class="box">
-              <input type="email" placeholder="email" class="box">
-              <input type="number" placeholder="phone" class="box">
-              <textarea name="" placeholder="message" class="box" id="" cols="30" rows="10"></textarea>
+              <input type="text" placeholder="Name" class="box">
+              <input type="email" placeholder="Email" class="box">
+              <input type="number" placeholder="Phone" class="box">
+              <textarea name="" placeholder="Message" class="box" id="" cols="30" rows="10"></textarea>
               <input type="submit" value="send message" class="btn">
            </form>
         </div>
